# Synapse

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  auto-deploy.sh  debug_mcp_endpoints.py  mcpize.yaml  pyproject.toml  requirements.txt  test_mcp_redirect.py  test_recall_fix.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml
synapse/: config.py  mcp_discovery.py  mcp_server.py  server.py
synapse/chunking/: __init__.py  fallback.py  treesitter.py
tests/: test_chunking_fallback.py  test_chunking_treesitter.py  test_chunking_treesitter_complete.py  test_chunking_treesitter_coverage.py  test_ci_cd_config.py  test_embeddings_backend.py  test_embeddings_cache.py  test_embeddings_complete_coverage.py  test_embeddings_sentence_transformer_coverage.py  test_embeddings_unixcoder.py  test_embeddings_unixcoder_coverage.py  test_graph_compressor.py  test_graph_resolver.py  test_index.py  test_mcp_base.py  test_mcp_discovery.py  test_mcp_discovery_removal.py  test_mcp_memorize.py  test_mcp_patch.py  test_mcp_protocol.py  test_mcp_recall.py  test_mcp_server_coverage.py  test_mcp_server_routes.py  test_mcp_transport.py  test_mock_embeddings.py  test_recall_integration.py  test_recall_underscore_fix.py  test_redis_client.py  test_redis_module_import.py  test_remaining_modules_complete.py  test_schema.py  test_schema_updated.py  test_search_bm25.py  test_server.py  test_server_coverage.py  test_server_full_coverage.py  test_server_redis_refactor.py
(+15 files in other folders)
